# GrafosTP

./: .gitignore  AdjacencyListGraph.cpp  AdjacencyListGraph.h  AdjacencyMatrixGraph.cpp  AdjacencyMatrixGraph.h  AdjacencyVectorGraph.cpp  AdjacencyVectorGraph.h  GrafosTP.cpp  GrafosTP.sln  GrafosTP.vcxproj  GrafosTP.vcxproj.filters  GraphFactory.cpp  GraphFactory.h  IGraph.cpp  IGraph.h  app  resource.h  resource1.h
TP1/: CMakeLists.txt  TP1.cpp  TP1.h
TP1/apresentacao/: apresentacao.html
TP1/biblioteca/algoritmos/: BFS.cpp  BFS.h  DFS.cpp  DFS.h
TP1/biblioteca/interface/: Grafo.cpp  Grafo.h  GraphFactory.h
TP1/biblioteca/representacao/: AdjacencyListGraph.cpp  AdjacencyMatrixGraph.cpp  AdjacencyMatrixGraph.h  AdjacencyVectorGraph.h  ListaAdjacencia.cpp  ListaAdjacencia.h  ListaAdjacenciaSimples.cpp  ListaAdjacenciaSimples.h  MatrizAdjacencia.cpp  MatrizAdjacencia.h  MatrizAdjacenciaTriangular.cpp  MatrizAdjacenciaTriangular.h  representacao.h
TP1/estudos/: estudos.h  main.cpp
TP1/estudos/1_comparacao_memoria/: estudo_caso_1.cpp  main.cpp
TP1/estudos/2_BFS/: main.cpp
TP1/estudos/2_BFS_DFS/: estudo_caso_2_3.cpp
TP1/estudos/3_Outros/: estudo_caso_final.cpp  main.cpp
TP2/: .gitignore  CMakeLists.txt
TP2/biblioteca/algoritmos/: Dijkstra.cpp  Dijkstra.h
TP2/biblioteca/interface/: GrafoPesado.cpp  GrafoPesado.h  apresentacao.html
TP2/biblioteca/representacao/: ListaAdjacenciaPesada.cpp  ListaAdjacenciaPesada.h  VetorAdjacenciaPesada.h  representacao.h  representacaoPesada.h
TP2/biblioteca/util/: LeitorGrafoPesado.cpp  LeitorGrafoPesado.h
TP2/estudos/: main.cpp
TP3/: CMakeLists.txt  CMakePresets.json
TP3/biblioteca/algoritmos/: BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h
TP3/biblioteca/interface/: GrafoDirigidoPesado.cpp  GrafoDirigidoPesado.h  GrafoPesado.cpp  GrafoPesado.h
TP3/biblioteca/representacao/: VetorAdjacenciaDirigidaPesada.cpp  VetorAdjacenciaDirigidaPesada.h  VetorAdjacenciaPesada.cpp  VetorAdjacenciaPesada.h  representacao.h  representacaoPesada.h
TP3/estudos/: main.cpp
